<?xml version="1.0"?>
<package format="2">
  <name>dvs_sync</name>
  <version>0.1.0</version>
  <description>The dvs_sync package</description>

  <maintainer email="2713168429@qq.com">LauZanMo</maintainer>
  <license>GPLv3</license>
  <author email="2713168429@qq.com">LauZanMo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dvs_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_export_depend>dvs_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <exec_depend>dvs_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>serial</exec_depend>

</package>
